[gd_scene load_steps=14 format=2]

[ext_resource path="res://Map/Chunk.gd" type="Script" id=1]
[ext_resource path="res://Map/assets/cobble.png" type="Texture" id=2]
[ext_resource path="res://Map/assets/stone.png" type="Texture" id=4]
[ext_resource path="res://Map/assets/grass_side.png" type="Texture" id=5]
[ext_resource path="res://Map/assets/dirt.png" type="Texture" id=6]
[ext_resource path="res://Map/assets/bedrock.png" type="Texture" id=7]
[ext_resource path="res://Map/assets/grass_top.png" type="Texture" id=8]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 6 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 7 )

[node name="Chunk" type="Spatial"]
script = ExtResource( 1 )

[node name="GrassTopMeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 2 )
skeleton = NodePath("")

[node name="GrassSideMeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 3 )
skeleton = NodePath("")

[node name="DirtMeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 4 )
skeleton = NodePath("")

[node name="StoneMeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 5 )
skeleton = NodePath("")

[node name="CobbleMeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 6 )
skeleton = NodePath("")

[node name="BedrockMeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 7 )
skeleton = NodePath("")

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]
